result/namespaces/err_2.xml.err
./test/namespaces/err_2.xml:1: error: Failed to parse QName ':'
<:/>
  ^
